[package]
name = "measure-enclave"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "measure-enclave"
path = "src/main.rs"

[dependencies]
# SEV-SNP measurement
sev = { version = "7", default-features = false, features = ["snp", "crypto_nossl"] }

# TDX measurement
tdx-measure = { git = "https://github.com/virtee/tdx-measure", tag = "v0.0.10" }

# Config parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Hashing (SHA-256 for config hash)
sha2 = "0.11"

# Encoding
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
