[package]
# Anchor crate. The package name intentionally differs from the upstream
# `rumdl` crate so `cargo build -p rumdl` resolves unambiguously to the
# registry crate; we just need rumdl in the workspace dep graph so its
# version is pinned by Cargo.lock and `cargo build -p rumdl` finds it.
# `just check` then execs `target/debug/rumdl` (debug build keeps cold
# compile cost down; rumdl's runtime is sub-second even unoptimized for
# a tree this size). No bin/lib code of our own — everything is upstream
# rumdl, version-pinned via `=X.Y.Z` below.
name = "rumdl-pinned"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
rumdl = "=0.2.6"
