[package]
name = "tinfoil-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# SEV-SNP attestation report parsing and certificate chain verification
sev = { version = "7", default-features = false, features = ["snp", "crypto_nossl"] }

# TDX Quote V4 parsing and verification (pure Rust, rustcrypto backend)
dcap-qvl = { version = "0.3", default-features = false, features = ["std", "rustcrypto"] }

# DER encoding (for SPKI fingerprint extraction; transitive dep of sev, pinned for direct use)
x509-cert = "0.2"
der = { version = "0.7", features = ["alloc"] }

# HTTP client for fetching attestation bundle
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json"] }

# TLS verification
rustls = { version = "0.23", default-features = false, features = ["std"] }
webpki-roots = "1"

# Connector layer plumbing for the per-handshake attesting client.
# `tower` gives us Layer/Service traits; `hyper` and `hyper-util` give us the
# Read/Write/Connection traits and the TokioIo adapter that lets us drive an
# inline HTTP/1.1 request on a freshly handshaked connection; `httparse`
# parses the response head.
tower = { version = "0.5", default-features = false }
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
httparse = "1"
http = "1"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util"] }

# Hashing
sha2 = "0.11"

# Encoding
base64 = "0.22"
hex = "0.4"
flate2 = "1"
urlencoding = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rustls = { version = "0.23", features = ["ring"] }
