[package]
name = "tinfoil-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# SEV-SNP attestation report parsing and certificate chain verification
sev = { version = "7", default-features = false, features = ["snp", "crypto_nossl"] }

# TDX Quote V4 parsing and verification (pure Rust, rustcrypto backend).
# The `report` feature pulls in `dcap_qvl::collateral::get_collateral_from_pcs`,
# which we use to fetch Intel PCS collateral. It transitively enables a few
# extra reqwest features (rustls-tls, blocking, hickory-dns); we accept that
# cost in exchange for not maintaining a parallel collateral-fetch impl.
#
# Pinned to upstream master past the published 0.3.12 release because we
# need `pub mod tcb_info;` (added on master) so we can name `TcbStatus` /
# `TcbStatusWithAdvisory` for our TCB acceptance policy. Master also
# includes a TCB-level sorting fix and TDX module identity verification
# (PRs #137, #138) — both strict improvements over 0.3.12. Drop back to a
# crates.io version once `tcb_info` lands in a release.
dcap-qvl = { git = "https://github.com/Phala-Network/dcap-qvl", rev = "90c4c9ffd6fd1565b138df161ecdf6fe568a326c", default-features = false, features = ["std", "rustcrypto", "report"] }

# Date parsing for TCB / QE identity nextUpdate fields driving the
# collateral cache TTL. Already in the dep tree transitively via dcap-qvl.
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }

# DER encoding (for SPKI fingerprint extraction; transitive dep of sev, pinned for direct use)
x509-cert = "0.2"
der = { version = "0.7", features = ["alloc"] }
# RSA-PSS verification for AMD CRLs (the `sev` crate uses this same crate
# internally for ARK→ASK signature verification when built with the
# `crypto_nossl` feature; we pin it directly so we can verify CRLs the
# `sev` crate doesn't handle).
rsa = "0.9"

# HTTP client for fetching attestation bundle
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json"] }

# TLS verification. Trust roots are supplied by the caller via
# `AttestingClientConfig::tls_roots` — the verifier intentionally does not
# bundle `webpki-roots` or `rustls-native-certs` so each consumer (server in
# enclave, CLI on developer machine, etc.) can pick the source that fits its
# environment without dragging the wrong dep into the others.
rustls = { version = "0.23", default-features = false, features = ["std"] }

# Connector layer plumbing for the per-handshake attesting client.
# `tower` gives us Layer/Service traits; `hyper` and `hyper-util` give us the
# Read/Write/Connection traits and the TokioIo adapter that lets us drive an
# inline HTTP/1.1 request on a freshly handshaked connection; `httparse`
# parses the response head.
tower = { version = "0.5", default-features = false }
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
httparse = "1"
http = "1"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util"] }

# Hashing. Pinned to 0.10 because the rest of our dep tree (dcap-qvl,
# rsa, p256, etc.) is on 0.10 and the rsa crate's `VerifyingKey<D>`
# bounds require `D: rsa::sha2::Digest`, which only resolves when our
# `Sha384` comes from the same `sha2` version rsa was compiled against.
sha2 = "0.10"

# Encoding
base64 = "0.22"
hex = "0.4"
flate2 = "1"
urlencoding = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rustls = { version = "0.23", features = ["ring"] }
# Live integration tests pull in WebPKI roots so they can talk to
# inference.tinfoil.sh / ATC. Production callers (eidola-server) bring their
# own.
webpki-roots = "1"
