[package]
name = "generate-openapi"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "generate-openapi"
path = "src/main.rs"

[dependencies]
eidolons-server = { path = "../../crates/eidolons-server" }
rustls = { version = "0.23", default-features = false }
rustls-rustcrypto = "0.0.2-alpha"
