[package]
name = "shared-typegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
crux_core = { version = "0.16", features = ["typegen"] }
crux_http = { version = "0.15", default-features = false, features = ["typegen"] }
eidolons-shared = { path = "../../crates/eidolons-shared", default-features = false, features = ["typegen"] }
anyhow = "1.0"

[[bin]]
name = "shared-typegen"
path = "src/main.rs"
